# cppboilerplate

./: .gitignore
.github/workflows/: ci.yml
boilerplate/: .clang-tidy  .gitignore  CMAKE_OVERVIEW.md  CMakeLists.txt  Doxyfile  PLAN.md  README.md
boilerplate/app/: CMakeLists.txt  main.cpp
boilerplate/build-graph/: compile_commands.json  graph.dot  graph.dot.homedanigitPlaygroundCppboilerplatebuild-graphgtestsrcgoogletest-buildliblibgtest.a.dependers  graph.dot.homedanigitPlaygroundCppboilerplatebuild-graphgtestsrcgoogletest-buildliblibgtest_main.a.dependers  graph.dot.mylib.dependers  graph.dot.mylib_app  graph.dot.mylib_tests  graph.dot.pthread.dependers
boilerplate/build-tidy/: compile_commands.json
boilerplate/build-tidy/app/: mylib_app
boilerplate/build-tidy/tests/: mylib_tests
boilerplate/include/mylib/: mylib.hpp
boilerplate/src/: CMakeLists.txt  mylib.cpp
boilerplate/tests/: CMakeLists.txt  test_mylib.cpp
